# mng-font-subset

./: .gitignore  CLAUDE.md  README.md  README_EN.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.json
.github/workflows/: build.yml
src/: App.tsx  index.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: FontPreview.css  FontPreview.tsx  FontUploader.css  FontUploader.tsx  ResultDisplay.css  ResultDisplay.tsx  TextInput.css  TextInput.tsx
src/styles/: App.css  index.css
